Change base url
Also removed forestry template folder

--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ title: Store Front
 email: ls724310@gmail.com
 description: >
   A sweet store front for a baller seller.
-baseurl: "/jekyll/"
-url: "http://levistroop.com"
+baseurl: ""
+url: ""
 twitter_username:
 github_username:  lmstroop
 # Build Settings
